--- a/docu_audiometer.ipynb
+++ b/docu_audiometer.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An audiometer is a device which evaluates the hearing ability. The hearing ability is characterized by the intensity and frequency range of sound that the human ear is capable to detect. Therefore, the audiometer plays pure tones of different frequency and intensity through a earspeaker, bone conduction hearing aid or a loudspeaker. The sequence of measurement is defined by the standard ISO EN 8253 1-3. The technical standard is described in ISO EN 60645 1-3."
+    "An audiometer is a device which evaluates the hearing ability. The hearing ability is characterized by the intensity and frequency range of sound that the human ear is capable to detect. Therefore, the audiometer plays pure tones of different frequency and intensity through a earspeaker, bone conduction hearing aid or a loudspeaker. The sequence of measurement is defined by the standard ISO EN 8253 1-3. The technical standard is described in ISO EN 60645 1-3. Furthermore, audiometers have to meet the requirements of calibration according to the series of standards ISO 389. "
    ]
   },
   {
@@ -71,7 +71,7 @@
    "source": [
     "Instructions: \n",
     "* Frequency range = 125 Hz - 8000 Hz (according to ISO 389-7 a frequency range of 20 Hz - 16000 Hz is also possible)\n",
-    "* Continous test tone with a duration of 1-2 seconds\n",
+    "* Continous test tone with a duration of 1-2 seconds (pulsed tones are also possible, but not recommended [ISO8253-1 ch. 6.2.1])\n",
     "* There is a break after the answer of the test person. The duration of break varies (not shorter than the duration of test tone)\n",
     "* At the beginning you have a test period to become familiar with using the sound system <br>\n",
     "  For Example:\n",
@@ -194,6 +194,51 @@
    },
    "source": [
     "Georg v. Bêkêsy: A New Audiometer: http://www.tandfonline.com/doi/pdf/10.3109/00016484709123756"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# 5) Standards"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Audiometric test methods: <br>\n",
+    "DIN EN ISO 8253-1 (2011) <br>\n",
+    "DIN EN ISO 8253-2 (2010) <br>\n",
+    "DIN EN ISO 8253-3 (2012) <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Technical standards: <br>\n",
+    "DIN EN 60645-1 (2015) <br>\n",
+    "DIN EN 60645-2 (1997) <br>\n",
+    "DIN EN 60645-3 (2008) <br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calibration of audiometers: <br>\n",
+    "DIN EN ISO 389-1 (2000) <br>\n",
+    "DIN EN ISO 389-2 (1996) <br>\n",
+    "DIN EN ISO 389-3 (1999) <br>\n",
+    "DIN EN ISO 389-4 (1999) <br>\n",
+    "DIN EN ISO 389-5 (2007) <br>\n",
+    "DIN EN ISO 389-6 (2007) <br>\n",
+    "DIN EN ISO 389-7 (2006) <br>\n",
+    "DIN EN ISO 389-8 (2004) <br>\n",
+    "DIN EN ISO 389-9 (2009) <br>"
    ]
   },
   {
