change image reference

--- a/docu_audiometer.ipynb
+++ b/docu_audiometer.ipynb
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"audiogram_example2.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+    "<img src=\"example_audiogram.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>"
    ]
   },
   {
