change new image reference

--- a/docu_audiometer.ipynb
+++ b/docu_audiometer.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![flowchart_familiarization](flowchart_familiarization.png)"
+    "![flowchart_familiarization](images/flowchart_familiarization.png)"
    ]
   },
   {
@@ -122,7 +122,7 @@
     "collapsed": false
    },
    "source": [
-    "![flowchart_ascending_method](flowchart_ascending.png)"
+    "![flowchart_ascending_method](images/flowchart_ascending.png)"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![envelope_of_pulsed_tones](envelope_of_pulsed_tones.png)"
+    "![envelope_of_pulsed_tones](images/envelope_of_pulsed_tones.png)"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"example_audiogram.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+    "<img src=\"images/example_audiogram.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![table_symbols_audiogram](table_symbols_audiogram.png)"
+    "![table_symbols_audiogram](images/table_symbols_audiogram.png)"
    ]
   },
   {
