--- a/docu_audiometer.ipynb
+++ b/docu_audiometer.ipynb
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![envelope_of_pulsed_tones](images/envelope_of_pulsed_tones.png)"
+    "<img src=\"images/envelope_of_pulsed_tones.png\" alt=\"envelope_of_pulsed_tones\" style=\"width: 800px;\"/>"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/example_audiogram.jpg\" alt=\"Drawing\" style=\"width: 400px;\"/>"
+    "<img src=\"images/example_audiogram.jpg\" alt=\"example_audiogram\" style=\"width: 400px;\"/>"
    ]
   },
   {
@@ -229,14 +229,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![table_symbols_audiogram](images/table_symbols_audiogram.png)"
+    "<img src=\"images/table_symbols_audiogram.png\" alt=\"table_symbols_audiogram\" style=\"width: 600px;\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table: Symbols for the graphical presentation of hearing threshold levels <br> Source: ISO 8253-1, ch. 10, Table 1"
+    "Table: Symbols for the graphical presentation of hearing threshold levels <br> Source: DIN ISO 8253-1, ch. 10, Table 1"
    ]
   },
   {
