--- a/audiometer_docu/docu_audiometer.ipynb
+++ b/audiometer_docu/docu_audiometer.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Audiometer"
+    "# Audiometer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) What is an audiometer?"
+    "## 1 What is an audiometer?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An audiometer is a device which evaluates the hearing ability. The hearing ability is characterized by the intensity and frequency range of sound that the human ear is capable to detect. Therefore, the audiometer plays pure tones of different frequency and intensity through a earspeaker, bone conduction hearing aid or a loudspeaker. The sequence of measurement is defined by the standard ISO EN 8253 1-3. The technical standard is described in ISO EN 60645 1-3. Furthermore, audiometers have to meet the requirements of calibration according to the series of standards ISO 389. "
+    "An audiometer is a device which evaluates the hearing ability. The hearing ability is characterized by the intensity and frequency range of sound that the human ear is capable to detect. Therefore, the audiometer plays pure tones of different frequency and intensity through a earspeaker, bone conduction hearing aid or a loudspeaker. The sequence of measurement is defined by the standard ISO EN 8253 1-3. The technical standard is described in ISO EN 60645 1-3. Furthermore, audiometers have to meet the requirements of calibration according to the series of standards ISO 389. You can find the list of standards in chapter 6."
    ]
   },
   {
@@ -27,7 +27,14 @@
     "collapsed": true
    },
    "source": [
-    "## 2) Instructions for the test persons"
+    "## 2 Instructions for the test persons (ISO 8253-1 ch. 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the correctness of results of hearing test"
    ]
   },
   {
@@ -55,14 +62,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3) Determination of hearing threshold level with air conduction and fixed frequency"
+    "## 3 Air conduction hearing threshold level determinations using fixed-frequency audiometry (ISO 8253-1 ch. 6)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1) Manually controlled determination of hearing threshold level"
+    "### 3.1 Manually controlled threshold determination (ISO 8253-1 ch. 6.2)"
    ]
   },
   {
@@ -106,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.1.1) Measuring hearing threshold level without masking"
+    "#### 3.1.1 Measuring hearing threshold level without masking (ISO 8253-1 ch. 6.2.3.2)"
    ]
   },
   {
@@ -129,14 +136,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2) Automatically registered determination of hearing threshold level"
+    "### 3.2 Hearing threshold determination with an automatic recording audiometer (ISO 8253-1 ch. 6.3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the method of Georg v. Bêkêsy an automatic audiometer increases the tone continuously as long as a signal button is pressed and decreases the tone when the button is released. The tone can be either continuously or pulsed. Comparing these different audiograms (pulsed and continuously) provide information about the type of hearing loss. <br> The test parameters are described In ISO 8253-1 and DIN EN 60645-1 :  "
+    "According to the method of Georg v. Békésy an automatic audiometer increases the tone continuously as long as a signal button is pressed and decreases the tone when the button is released. The tone can be either continuously or pulsed. Comparing these different audiograms (pulsed and continuously) provide information about the type of hearing loss. <br> The test parameters are described In ISO 8253-1 and DIN EN 60645-1 :  "
    ]
   },
   {
@@ -194,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4) The Audiogram"
+    "# 4 The Audiogram"
    ]
   },
   {
@@ -229,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/table_symbols_audiogram.png\" alt=\"table_symbols_audiogram\" style=\"width: 600px;\"/>"
+    "<img src=\"images/table_symbols_audiogram.png\" alt=\"table_symbols_audiogram\" style=\"width: 700px;\"/>"
    ]
   },
   {
@@ -243,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5) Links"
+    "# 5 Links"
    ]
   },
   {
@@ -289,7 +296,7 @@
     "collapsed": true
    },
    "source": [
-    "# 6) Standards"
+    "# 6 Standards"
    ]
   },
   {
@@ -345,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.4.3+"
   }
  },
  "nbformat": 4,
