Add standard names in GER,ENG,FRE

--- a/docu/docu_audiometer.ipynb
+++ b/docu/docu_audiometer.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 The Audiogram"
+    "# 4 The Audiogram (ISO 8253-1 ch. 10)"
    ]
   },
   {
@@ -303,37 +303,200 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Audiometric test methods: <br>\n",
-    "DIN EN ISO 8253-1 (2011) <br>\n",
-    "DIN EN ISO 8253-2 (2010) <br>\n",
-    "DIN EN ISO 8253-3 (2012) <br>"
+    "### 6.1 Audiometric test methods <br>\n",
+    "\n",
+    "**Part 1: DIN EN ISO 8253-1 (2011)** <br>\n",
+    "**–––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER : Akustik – Audiometrische Prüfverfahren – Teil 1: Grundlegende Verfahren der Luft- und\n",
+    "Knochenleitungs-Schwellenaudiometrie mit reinen Tönen <br>\n",
+    "ENG: Acoustics — Audiometric test methods — Part 1: Pure-tone air and bone conduction audiometry <br>\n",
+    "FRE: Acoustique — Méthodes d'essais audiométriques — Partie 1: Audiométrie à sons purs en conduction aérienne et en\n",
+    "conduction osseuse <br>\n",
+    " <br> <br>\n",
+    "\n",
+    "**Part 2: DIN EN ISO 8253-2 (2010)** <br>\n",
+    "**–––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Audiometrische Prüfverfahren – Teil 2: Schallfeld-Audiometrie mit reinen Tönen und schmalbandigen\n",
+    "Prüfsignalen <br>\n",
+    "ENG: Acoustics – Audiometric test methods – Part 2: Sound field audiometry with pure-tone and narrow-band test signals <br>\n",
+    "FRE: Acoustique –\n",
+    "Méthodes d ́essais audiométriques –\n",
+    "Partie 2: Audiométrie en champ acoustique avec des sons purs et des bruits à bande\n",
+    "étroite comme signaux d ́essai <br>\n",
+    " <br> <br>\n",
+    "\n",
+    "** Part 3: DIN EN ISO 8253-3 (2012) ** <br>\n",
+    "**–––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Audiometrische Prüfverfahren – Teil 3: Sprachaudiometrie <br>\n",
+    "ENG: Acoustics – Audiometric test methods – Part 3: Speech audiometry <br>\n",
+    "FRE: Acoustique – Méthodes d’essais audiométriques – Partie 3: Audiométrie vocale <br>\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Technical standards: <br>\n",
-    "DIN EN 60645-1 (2015) <br>\n",
-    "DIN EN 60645-2 (1997) <br>\n",
-    "DIN EN 60645-3 (2008) <br>"
+    "### 6.2 Technical standards <br>\n",
+    "\n",
+    "**Part 1: DIN EN 60645-1 (2015) ** <br>\n",
+    "**–––––––––––––––––––––––––**\n",
+    "\n",
+    "\n",
+    "GER: Akustik – Audiometer – Teil 1: Reinton-Audiometer <br>\n",
+    "ENG: Electroacoustics – Audiometric equipment – Part 1: Equipment for pure-tone audiometry <br>\n",
+    "FRE: Électroacoustique – Appareils audiométriques – Partie 1: Appareils pour l ’ audiométrie tonale <br>\n",
+    "\n",
+    "\n",
+    "** Part 2: DIN EN 60645-2 (1997) ** <br>\n",
+    "**–––––––––––––––––––––––––**\n",
+    "\n",
+    "\n",
+    "GER: Audiometer – Teil 2: Geräte für die Sprachaudiometrie <br>\n",
+    "ENG: Audiometers - Part 2: Equipment for speech audiometry <br>\n",
+    "FRE: Audiometres - Partie 2: Appareils pour Taudiometrie vocale <br>\n",
+    "\n",
+    "** Part 3: DIN EN 60645-3 (2008) ** <br>\n",
+    "**–––––––––––––––––––––––––**\n",
+    "\n",
+    "\n",
+    "GER: Akustik – Audiometer – Teil 3: Kurzzeit-Hörprüfsignale <br>\n",
+    "ENG: Electroacoustics – Audiometric equipment – Part 3: Test signals of short duration <br>\n",
+    "FRE: Electroacoustique – Equipements audiométriques – Partie 3: Signaux d’essai de courte durée <br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calibration of audiometers: <br>\n",
-    "DIN EN ISO 389-1 (2000) <br>\n",
-    "DIN EN ISO 389-2 (1996) <br>\n",
-    "DIN EN ISO 389-3 (1999) <br>\n",
-    "DIN EN ISO 389-4 (1999) <br>\n",
-    "DIN EN ISO 389-5 (2007) <br>\n",
-    "DIN EN ISO 389-6 (2007) <br>\n",
-    "DIN EN ISO 389-7 (2006) <br>\n",
-    "DIN EN ISO 389-8 (2004) <br>\n",
-    "DIN EN ISO 389-9 (2009) <br>"
+    "### 6.3 Calibration of audiometers<br>\n",
+    "\n",
+    "** Part 1: DIN EN ISO 389-1 (2000) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte – Teil 1: Äquivalente Bezugs-Schwellenschalldruckpegel für reine Töne und supra-aurale Kopfhörer <br>\n",
+    "ENG: Acoustics – Reference zero for the calibration of audiometric equipment –\n",
+    "Part 1: Reference equivalent threshold sound pressure levels for pure tones\n",
+    "and supra-aural earphones <br> \n",
+    "FRE: Acoustique – Zéro de référence pour l’étalonnage d’equipements audiométriques –\n",
+    "Partie 1: Niveaux de référence équivalents de pression acoustique liminaire pour\n",
+    "les écouteurs à sons purs supra-auraux <br>\n",
+    "\n",
+    "** Part 2: DIN EN ISO 389-2 (1996) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte –\n",
+    "Teil 2: Äquivalente Bezugs-Schwellenschalldaickpegel für reine Töne und Einsteckhörer <br>\n",
+    "ENG: Acoustics – Reference zero for the calibration of audiometric equipment –\n",
+    "Part 2: Reference equivalent threshold sound pressure levels for pure tones and\n",
+    "insert earphones <br> \n",
+    "FRE: Acoustique – Zero de reference pour l'etalonnage d'equipments audiometriques –\n",
+    "Partie 2: Niveaux de reference equivalents de pression acoustique liminaire pour\n",
+    "les ecouteurs ä son purs et ä Insertion <br>\n",
+    "\n",
+    "** Part 3: DIN EN ISO 389-3 (1999) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte – \n",
+    "Teil 3: Äquivalente Bezugs-Schwellenkraftpegel für reine Töne und\n",
+    "Knochenleitungshörer <br>\n",
+    "ENG: Acoustics – Reference zero for the calibration of audiometric equipment – Part 3:\n",
+    "Reference equivalent threshold force levels for pure tones and bona vibrators <br> \n",
+    "FRE: Acoustique –  Zero de reference pour l'etalonnage d'equipements audiometriques –  Partie 3; Niveaux de reference equivalents de force liminaire pour les vibrateurs ä sons purs et les ossivibrateurs <br>\n",
+    "\n",
+    "** Part 4: DIN EN ISO 389-4 (1999) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte –\n",
+    "Teil 4: Bezugspegel für schmalbandige Verdeckungsgeräusche <br>\n",
+    "ENG: Acoustics – Reference zero for the calibration of audiometric equipment – Part 4:\n",
+    "Reference levels for narrow-band masking noise <br> \n",
+    "FRE: Acoustique – Zero de reference pour l'etalonnage d'equipements audiometriques – Partie 4: Niveaux de reference pour brult masque en bände etroite <br>\n",
+    "\n",
+    "** Part 5: DIN EN ISO 389-5 (2007) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte –\n",
+    "Teil 5: Äquivalente Bezugs-Schwellenschalldruckpegel für reine Töne im\n",
+    "Frequenzbereich 8 kHz bis 16 kHz <br>\n",
+    "ENG: Acoustics – Reference zero for the calibration of audiometric equipment –\n",
+    "Part 5: Reference equivalent threshold sound pressure levels for pure tones in the\n",
+    "frequency range 8 kHz to 16 kHz <br> \n",
+    "FRE: Acoustique – Zéro de référence pour l’étalonnage d’équipements audiométriques –\n",
+    "Partie 5: Niveaux de référence équivalents de pression acoustique liminaire pour les sons\n",
+    "purs dans le domaine de fréquences de 8 kHz à 16 kHz<br>\n",
+    "\n",
+    "** Part 6: DIN EN ISO 389-6 (2007) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte –\n",
+    "Teil 6: Äquivalente Bezugs-Schwellenschalldruckpegel für akustische\n",
+    "Kurzzeit-Testsignale <br>\n",
+    "ENG: Acoustics – Reference zero for the calibration of audiometric equipment –\n",
+    "Part 6: Reference threshold of hearing for test signals of short duration <br> \n",
+    "FRE: Acoustique –\n",
+    "Zéro de référence pour l’étalonnage d’équipements audiométriques –\n",
+    "Partie 6: Niveaux liminaires d’audition de référence pour signaux d’essai de courte durée <br>\n",
+    "\n",
+    "** Part 7: DIN EN ISO 389-7 (2006) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik –\n",
+    "Standard-Bezugspegel für die Kalibrierung von audiometrischen\n",
+    "Geräten –\n",
+    "Teil 7: Bezugshörschwellen unter Freifeld- und Diffusfeldbedingungen <br>\n",
+    "ENG: Acoustics –\n",
+    "Reference zero for the calibration of audiometric equipment –\n",
+    "Part 7: Reference threshold of hearing under free-field and diffuse-field listening\n",
+    "conditions <br> \n",
+    "FRE: Acoustique –\n",
+    "Zéro de référence pour l’étalonnage d’équipements audiométriques –\n",
+    "Partie 7: Niveau liminaire de référence dans des conditions d’écoute en champ libre et en\n",
+    "champ diffus <br> \n",
+    "\n",
+    "** Part 8: DIN EN ISO 389-8 (2004) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik – Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte –\n",
+    "Teil 8: Äquivalente Bezugs-Schwellenschalldruckpegel für reine Töne\n",
+    "und circumaurale Kopfhörer <br>\n",
+    "ENG: Acoustics –\n",
+    "Reference zero for the calibration of audiometric equipment –\n",
+    "Part 8: Reference equivalent threshold sound pressure levels for pure tones and\n",
+    "circumaural earphones <br> \n",
+    "FRE: Acoustique –\n",
+    "Zéro de référence pour l’étalonnage d’équipements audiométriques –\n",
+    "Partie 8: Niveaux de référence équivalents de pression acoustique liminaire pour les\n",
+    "écouteurs à sons purs circumauraux <br>\n",
+    "\n",
+    "** Part 9: DIN EN ISO 389-9 (2009) ** <br>\n",
+    "**––––––––––––––––––––––––––**\n",
+    "\n",
+    "GER: Akustik –\n",
+    "Standard-Bezugspegel für die Kalibrierung audiometrischer Geräte –\n",
+    "Teil 9: Vorzugs-Messbedingungen zur Bestimmung von\n",
+    "Bezugs-Hörschwellenpegeln <br>\n",
+    "ENG: Acoustics –\n",
+    "Reference zero for the calibration of audiometric equipment –\n",
+    "Part 9: Preferred test conditions for the determination of reference hearing threshold\n",
+    "levels <br> \n",
+    "FRE: Acoustique –\n",
+    "Zéro de référence pour l ́étalonnage d ́équipements audiométriques –\n",
+    "Partie 9: Conditions d ́essai préconisées pour la détermination des niveaux liminaires\n",
+    "d ́audition de référence <br>\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
