--- a/docs/audiometer_doc.ipynb
+++ b/docs/audiometer_doc.ipynb
@@ -106,7 +106,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Source: ISO 8253-1 ch. 6.2.2 has been converted into a flowchart "
+    "Source: ISO 8253-1 ch. 6.2.2 has been converted into a flowchart <br> <br>\n",
+    "1)* The author assumes at this point in ISO 8253-1 (penultimate paragraph in ch. 6.2.2) the following: At the end of the familiarization two tones with the same level are played. The first one is from the last 10dB-increasing and the second one \"Present Tone\" is the first one. The familiarization stops if and only if the responses of the first and second one are consistent. In the other case the familiarization will be repeated. If the repetition lead to an inconsistent result too, the instructions should be repeated. The further steps for an invalid result after this repetition is in the ISO not described.  "
    ]
   },
   {
@@ -130,6 +131,18 @@
    },
    "source": [
     "![flowchart_ascending_method](images/flowchart_ascending.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Source: ISO 8253-1 ch. 6.2.3.2 has been converted into a flowchart <br> <br>\n",
+    "    \n",
+    "2)* \"If the results at 1 000 Hz of the repeat measurement for that ear\n",
+    "agree to 5 dB or less with those of the first measurements for the same ear, proceed to the other ear. If 10 dB\n",
+    "or more improvement or worsening in hearing threshold level is discernible, retest at further frequencies in the\n",
+    "same order until agreement to 5 dB or less has been obtained.\" (ISO 8253-1 ch. 6.2.3.2 last paragraph in step 3)"
    ]
   },
   {
