--- a/docs/manual.ipynb
+++ b/docs/manual.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  <font color='red'>The audiometer software doesn't work correctly without a proper calibration!</font> "
+    "** *The audiometer software doesn't work correctly without a proper calibration!* **"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  <font color='red'>Before you start the hearing test you have to understand all software-specific instructions below!</font> "
+    "** *Before you start the hearing test you have to understand all software-specific instructions below!* **"
    ]
   },
   {
