--- a/docs/audiometer_doc.ipynb
+++ b/docs/audiometer_doc.ipynb
@@ -34,28 +34,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the correctness of results of hearing test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " * "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*"
+    "(The following text in this chapter is borrowed from ISO 8253-1 ch.5 completely)\n",
+    "\n",
+    "The instructions shall be phrased in language appropriate to the listener and shall normally indicate:\n",
+    "*  the response task\n",
+    "* the need to respond whenever the tone is heard in either ear, no matter how faint it may be\n",
+    "* the need to respond as soon as the tone is heard and to stop responding immediately once the tone is no\n",
+    "  longer heard\n",
+    "* the general pitch sequence of the tones\n",
+    "* the ear to be tested first \n",
+    "\n",
+    "The response from the test subject indicating when the tone is heard and when it is no longer heard shall be\n",
+    "clearly observable. Examples of commonly used responses are:\n",
+    "* pressing and releasing a signal switch\n",
+    "* raising and lowering the finger or hand"
    ]
   },
   {
@@ -256,14 +248,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table: Symbols for the graphical presentation of hearing threshold levels <br> Source: DIN ISO 8253-1, ch. 10, Table 1"
+    "Table: Symbols for the graphical presentation of hearing threshold levels <br> Source: DIN ISO 8253-1, ch. 10, table 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5 Links"
+    "# 5 Calibration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/calibration_data.png\" alt=\"table_symbols_audiogram\" style=\"width: 600px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table: Recommended reference equivalent threshold sound pressure levels (RETSPL) in a coupler complying with IEC 60303 <br>\n",
+    "Source: ISO389-1 (EN), ch. 4, table 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6 Links"
    ]
   },
   {
@@ -309,14 +323,14 @@
     "collapsed": true
    },
    "source": [
-    "# 6 Standards"
+    "# 7 Standards"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.1 Audiometric test methods <br>\n",
+    "### 7.1 Audiometric test methods <br>\n",
     "\n",
     "**Part 1: DIN EN ISO 8253-1 (2011)** <br>\n",
     "**–––––––––––––––––––––––––––**\n",
@@ -353,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.2 Technical standards <br>\n",
+    "### 7.2 Technical standards <br>\n",
     "\n",
     "**Part 1: DIN EN 60645-1 (2015) ** <br>\n",
     "**–––––––––––––––––––––––––**\n",
@@ -385,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6.3 Calibration of audiometers<br>\n",
+    "### 7.3 Calibration of audiometers<br>\n",
     "\n",
     "** Part 1: DIN EN ISO 389-1 (2000) ** <br>\n",
     "**––––––––––––––––––––––––––**\n",
