add calibration table for focusrite scarlett 2i2

--- a/docs/manual.ipynb
+++ b/docs/manual.ipynb
@@ -149,6 +149,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Calibration for the Focusrite Scarlett 2i2 Souncard and Beyerdynamic DT48A.01 earphones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measured by max. pc-sound and full-scaled earphone controller "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Frequency/Hz | Reference(0dBHL)/dBFS | Correction value |\n",
+    "|:------------:|:---------------------:|:----------------:|\n",
+    "|     125      |      -81              |       11         |\n",
+    "|     250      |      -92              |       6          |\n",
+    "|     500      |      -80              |      -12         |\n",
+    "|     750      |      -85              |      -11         |\n",
+    "|     1000     |      -84              |      -10         |\n",
+    "|     1500     |      -82              |      -11         |\n",
+    "|     2000     |      -90              |      -4          |\n",
+    "|     3000     |      -94              |       3          |\n",
+    "|     4000     |      -91              |       4          |\n",
+    "|     6000     |      -70              |      -12         |\n",
+    "|     8000     |      -76              |      -6          |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Start the hearing test"
    ]
   },
