left,right,space

--- a/docs/manual.ipynb
+++ b/docs/manual.ipynb
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.) At the beginning of each new frequency starts a test tone with a infinite duration to familiarize you with this frequency. Choose a **clearly audible** loudness with the arrow keys on your keyboard (up: the loudness get higher, down: the loudness get lower) and confirm it with the Enter key when you feel comfortable with. <br>\n",
+    "1.) At the beginning of each new frequency starts a test tone with a infinite duration to familiarize you with this frequency. Choose a **clearly audible** loudness with the arrow keys on your keyboard (right: the loudness get higher, left: the loudness get lower) and confirm it with the space key when you feel comfortable with. <br>\n",
     "\n",
     "2.) Click the left mouse button once to start the hearing test at this frequency\n",
     "\n",
